fixed paragraph spacing sizes that were deleted

--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ h2 {
 }
 p {
   color: black;
+    font-size: 1.5em;
+    letter-spacing: 1px;
+    line-height: 1.6;
 }
 ul {
   list-style-type: circle;
